# Logisim-RUST

./: .gitattributes  .gitignore  BFH_MIGRATION_NOTES.md  BUILD.md  COMPONENT_PARITY_AUDIT.md  Cargo.toml  Foundation_README.md  HEALTH.md  I18N_A11Y_MATRIX.md  MERGE_STATUS.md  MIGRATION_NOTES.md  README.md  STD_GATES_MIGRATION.md  UI_ARCHITECTURE_NOTES.md  UI_MIGRATION_MAPPING.md  current_errors.txt  log.txt  log24errors.txt  log65errors.txt  log_converted.txt  log_latest.txt  log_latest_converted.txt  log_new.txt  log_new_converted.txt  runtime_log.txt  runtime_log_converted.txt
Logisim-Rust/: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CI_CD_SUMMARY.md  Cargo.toml  MIGRATION_NOTES.md  README.md  clippy.toml  justfile  rustfmt.toml
Logisim-Rust/.github/: CONTRIBUTING.md  dependabot.yml
Logisim-Rust/.github/workflows/: rust-build-test.yml
Logisim-Rust/AppDir/: logisim-rust.desktop
Logisim-Rust/docs/: ARCHITECTURE.md  COMPONENT_ABSTRACTIONS.md  FOUNDATION_MAPPING.md  GRAY_CODE_MODULE.md  MIGRATION_NOTES.md
Logisim-Rust/example_schematics/logisim/: BCDto7Segment_evo.circ  BCDto7Segment_pre.circ  MAR.circ  sc.circ  transceiver.circ
Logisim-Rust/example_schematics/logisim/clock/: clock.circ
Logisim-Rust/example_schematics/logisim/firmware/: FW.circ  firmware_hello
Logisim-Rust/example_schematics/logisim/registers/: REG4bcirc.circ  reg8x2.circ
Logisim-Rust/example_schematics/logisim_evolution/: ALLTOGETHER.circ  ALU.circ  Clock_C.circ  IR.circ  MAR.circ  REG1.circ  REG8.circ  STACK.circ
Logisim-Rust/examples/: plugin_demo.rs
Logisim-Rust/examples/stub_plugin/: Cargo.toml
Logisim-Rust/examples/stub_plugin/src/: components.rs  lib.rs  observers.rs
Logisim-Rust/logisim_cli/: Cargo.toml
Logisim-Rust/logisim_cli/src/: lib.rs  main.rs
Logisim-Rust/logisim_core/: CIRC_FORMAT.md  Cargo.toml  README.md
Logisim-Rust/logisim_core/src/: build_info.rs  circ_format.rs  component.rs  event.rs  event_system.rs  extensibility  lib.rs  modeling.rs  netlist.rs  observers.rs  prefs.rs  signal.rs  simulation.rs  util_backup.rs
Logisim-Rust/logisim_core/src/comp/: component.rs  draw_context.rs  event.rs  factory.rs  mod.rs  pin.rs
Logisim-Rust/logisim_core/src/components/: mod.rs
Logisim-Rust/logisim_core/src/components/base/: mod.rs
Logisim-Rust/logisim_core/src/components/gray/: components.rs  counter_data.rs  counter_poker.rs  gray_counter.rs  gray_incrementer.rs  mod.rs  (+1 more)
Logisim-Rust/logisim_core/src/contracts/: component_listener.rs  document_listener.rs  key_listener.rs  layout_manager.rs  list_data_listener.rs  mod.rs  mouse_input_listener.rs  mouse_listener.rs  mouse_motion_listener.rs  window_focus_listener.rs  window_listener.rs
Logisim-Rust/logisim_core/src/data/: attributes.rs  bit_width.rs  bounds.rs  direction.rs  location.rs  mod.rs
Logisim-Rust/logisim_core/src/extensibility/: example_plugin.rs  extension_points.rs  mod.rs  registry.rs
Logisim-Rust/logisim_core/src/file/: load_failed_exception.rs  loader.rs  logisim_file.rs  mod.rs
Logisim-Rust/logisim_core/src/hdl/: content.rs  file_io.rs  hdl_file.rs  hdl_model.rs  hdl_model_listener.rs  mod.rs  model.rs  strings.rs
Logisim-Rust/logisim_core/src/instance/: instance.rs  instance_component.rs  instance_data.rs  instance_data_singleton.rs  instance_factory.rs  instance_logger.rs  instance_logger_adapter.rs  instance_painter.rs  instance_poker.rs  instance_poker_adapter.rs  instance_state.rs  instance_state_impl.rs  instance_text_field.rs  mod.rs  port.rs  std_attr.rs
Logisim-Rust/logisim_core/src/integrations/: fpga.rs  mod.rs  plugin_examples.rs  plugins.rs  stub_plugin.rs  tcl.rs  vhdl.rs
Logisim-Rust/logisim_core/src/std/: README.md  mod.rs
Logisim-Rust/logisim_core/src/tools/: add_tool.rs  library.rs  mod.rs  select_tool.rs  tool.rs  wiring_tool.rs
Logisim-Rust/logisim_core/src/util/: cache.rs  collection_util.rs  file_util.rs  locale_manager.rs  mod.rs  string_util.rs
Logisim-Rust/logisim_core/test_resources/logisim/: BCDto7Segment.circ  MAR_DEC.circ  firmware.txt  libre8.circ
Logisim-Rust/logisim_core/test_resources/logisim_evolution/: Memory_C.circ  STACK.circ
Logisim-Rust/logisim_core/tests/: mainboard_circ_test.rs
Logisim-Rust/logisim_formats/: Cargo.toml
Logisim-Rust/logisim_formats/src/: lib.rs
Logisim-Rust/logisim_ui/: Cargo.toml
Logisim-Rust/logisim_ui/src/: lib.rs  main.rs  main_lib.rs
Logisim-Rust/logisim_ui/src/draw/: mod.rs
Logisim-Rust/logisim_ui/src/gui/: app.rs  canvas.rs  chronogram.rs  edit_handler.rs  i18n.rs  mod.rs  project_explorer.rs  properties.rs  selection.rs  startup.rs  toolbar.rs  toolbox.rs
Logisim-Rust/logisim_ui/src/hex/: caret.rs  hex_editor.rs  hex_model.rs  hex_model_listener.rs  highlighter.rs  measures.rs  mod.rs
Logisim-Rust/logisim_ui/tests/: chronogram_integration_test.rs  ui_components_integration.rs
Logisim-Rust/snap/gui/: logisim-evolution.desktop
logisim_core/: Cargo.toml
logisim_core/doc/: circ_schema.md
logisim_core/examples/: circ_example.rs
logisim_core/src/: circ_format.rs  circ_parser.rs  circ_serializer.rs  component.rs  event.rs  lib.rs  netlist.rs  signal.rs  simulation.rs
logisim_core/test_resources/: README.MD
logisim_core/test_resources/logisim/: PC_IR_MAR.circ  microcode.hex
logisim_core/test_resources/logisim/PC/: PC.circ
logisim_core/test_resources/logisim/firmware/: only_fetch
logisim_core/test_resources/logisim/registers/: REG16.circ  REG2.circ  REG4.circ  regsel.circ  selector
logisim_core/test_resources/logisim_evolution/: Memory_Addres_Register.circ  Program_Counter.circ  STACK2.circ  Step_Counter.circ  transceiver.circ
logisim_core/tests/: basic_sim.rs  circ_roundtrip.rs  mainboard_circ_test.rs
logisim_ui/: Cargo.toml
logisim_ui/src/: lib.rs
logisim_ui/src/gui/: app.rs  canvas.rs  edit_handler.rs  frame.rs  menu.rs  mod.rs  project_explorer.rs  selection.rs  tests.rs  toolbox.rs
logisim_ui/src/gui/chronogram/: mod.rs  model.rs  panel.rs  timeline.rs  waveform.rs
logisim_ui/tests/: chronogram_integration_test.rs  chronogram_tests.rs  integration_tests.rs
(+310 files in other folders)
