[package]
name = "logisim_core"
version.workspace = true
edition.workspace = true
description = "Core simulation kernel for Logisim-RUST digital logic simulator"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
roxmltree = { workspace = true }
indexmap = { version = "2.0", features = ["serde"] }
log = "0.4"
once_cell = "1.19"
regex = "1.0"

[dev-dependencies]
# Testing dependencies
proptest = "1.0"
tempfile = "3.0"
env_logger = "0.10"

[[example]]
name = "plugin_demo"
path = "../examples/plugin_demo.rs"