[package]
name = "logisim_formats"
version.workspace = true
edition.workspace = true
description = "File format parsers and writers for Logisim-RUST digital logic simulator"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
logisim_core = { path = "../logisim_core" }
serde = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
roxmltree = { workspace = true }
indexmap = { version = "2.0", features = ["serde"] }
log = "0.4"

[dev-dependencies]
# Testing dependencies
proptest = "1.0"
tempfile = "3.0"