[package]
name = "logisim_ui"
version.workspace = true
edition.workspace = true
description = "UI/GUI components for Logisim-RUST digital logic designer and simulator"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "logisim-rust"
path = "src/main.rs"

[features]
default = []  # No default features to ensure CI/CD compatibility
gui = ["dep:egui", "dep:eframe"]

[dependencies]
logisim_core = { path = "../logisim_core" }
serde = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
# Additional dependencies for UI functionality
indexmap = { version = "2.0", features = ["serde"] }

# GUI framework dependencies - conditionally included for supported platforms
# winit/egui requires proper display server setup, so we make these optional
# and let the build system decide when to include them
egui = { version = "0.30", optional = true }
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use glow rendering backend
    "persistence",   # Enable restoring app state when restarting the app
], optional = true }

[dev-dependencies]
# Testing dependencies
proptest = "1.0"

[dependencies.env_logger]
version = "0.10"